--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./logoSocool-titleLink.png" />
+    <meta property="og:title" content="lmao lmaoooooooooooo" />
+    <meta property="og:description" content="Mô tả trang web của bạn" />
+    <meta property="og:image" content="https://socool.ai/static/media/logoSoCool.b7c2ad5c613239725ce7.jpeg" />
+    <meta property="og:url" content="khong co gi ca" />
+    <meta property="og:type" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="theme-color" content="#000000" />
     <meta
