fix meta use helmet

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         name="description"
         content="Provide the disposable AI assistant for social commerce"
     />
-    <meta property="og:image" content="https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fjpeg&attachment_token=AOo0EEXkliHJZ9e%2B400U4eFM2A6KRRRYzeeAolUHvD9jWbUrpWfZuk%2FzpGG%2BZsjOj%2BJ%2F14%2F3F68sK61FR3%2FjIVfz%2B7wDSVtVvUm1YgPdzoSyBnSpAp4asY3EHOobnkJqQgWIsfyzLY87XqmVV0Qm5xoslwVxMduLM8iZVfbSQO7z%2F8IYbRYcRC1lkrYKhfVrMMAKBJ5ixedk3iNOZsJsxyDyuCTnTMkS8sDZHJBo27FjGFBHbOSrygPKgO2LK6AZFrzXPB%2FYh3eXFvFSJ6U874pByKjGS5MzLXtN37X7zdxwsu4HAGFmAszXjJXiDW%2BBRRrkjvYp4CLIvKPjzdaZw6ipx8bu%2FE%2BtEn4FFiiM4lO0qI%2BSS50nel835rAASc4439K8kBM%2FVgfjzMgYFOze%2Fx517XKo6TnNaCOSzKSyWlU%2BT7xZWF55l%2FxrCCNAw9uhpKMrt4%2Fe7AXyIoMOSVkwr%2FU9VJFdWWSy%2FyemJ%2BvW3QBEUyQmJth4iI9lQZq7kzsJTdXTJ0nJ1HFF6kKp8uNUlL1Onx06vRotRed00Fkn1LflJRbA8%2BsRkQJSL6JC%2F98ytdgBK8FRR7vTsEQ%2BzQor&sz=w1920-h868" />
+    <meta property="og:image" content="./avtThumbnail.jpeg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
