--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         name="description"
         content="Provide the disposable AI assistant for social commerce"
     />
-    <meta property="og:image" content="./avtThumbnail.jpeg" />
+    <meta property="og:image" content="https://socool.ai/static/media/logo.6631cf00ec6cecaf861a.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
