--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
         name="description"
-        content="Provide the disposable AI assistant for social commerce"
+        content="Generates disposable links with AI to automate the selling of anything"
     />
     <meta property="og:image" content="https://socool.ai/static/media/logo.6631cf00ec6cecaf861a.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
