--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         name="description"
         content="Generates disposable links with AI to automate the selling of anything"
     />
-    <meta property="og:image" content="https://socool.ai/static/media/logo.6631cf00ec6cecaf861a.png" />
+    <meta property="og:image" content="https://socool.ai/static/media/logoSoCool.b7c2ad5c613239725ce7.jpeg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
